[package]
name = "top14covid19"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0.37"
ansi_term = "0.12.1"
clap = "2.33.3"
